<?xml version="1.0" encoding="utf-8"?>
<merge
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <com.storyous.commonutils.widgets.LoadingButton
        android:id="@+id/button_cancel"
        style="@style/Button.Primary.Contextual.Dark"
        android:layout_width="0dp"
        android:text="@string/cancel_delivery_order"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/button_accept"
        app:layout_constraintStart_toEndOf="@+id/centerGuideline" />

    <com.storyous.commonutils.widgets.LoadingButton
        android:id="@+id/button_accept"
        style="@style/Button.Primary.Contextual.Light"
        android:layout_width="0dp"
        android:gravity="center"
        android:text="@string/accept_order"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/button_cancel" />

    <com.storyous.commonutils.widgets.LoadingButton
        android:id="@+id/button_dispatch"
        style="@style/Button.Primary.Contextual.Dark"
        android:layout_width="0dp"
        android:text="@string/dispatch_delivery_order"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/centerGuideline" />
</merge>