<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:padding="@dimen/offset_8dp">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/accept_orders_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings_accept_new_orders"
            app:flow_verticalBias="0.5"
            app:layout_constraintBottom_toTopOf="@+id/prep_time_label"
            app:layout_constraintEnd_toEndOf="@+id/controls_guideline"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/prep_time_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings_meal_preparation_time"
            app:layout_constraintBottom_toTopOf="@+id/integrated_dispatch_label"
            app:layout_constraintEnd_toEndOf="@+id/controls_guideline"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/accept_orders_label" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/integrated_dispatch_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings_integrated_dispatch"
            app:layout_constraintBottom_toBottomOf="@+id/bottom_guideline"
            app:layout_constraintEnd_toEndOf="@+id/controls_guideline"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/prep_time_label" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/accept_orders_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/offset_16dp"
            android:visibility="gone"
            app:layout_constraintBaseline_toBaselineOf="@+id/accept_orders_label"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toEndOf="@+id/label_barrier" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/prep_time_link"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/offset_16dp"
            android:visibility="gone"
            app:layout_constraintBaseline_toBaselineOf="@+id/prep_time_label"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toEndOf="@+id/label_barrier"
            tools:text="55 min." />

        <androidx.appcompat.widget.AppCompatSpinner
            android:id="@+id/integrated_dispatch_spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/offset_16dp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@+id/integrated_dispatch_label"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toEndOf="@+id/label_barrier"
            app:layout_constraintTop_toTopOf="@+id/integrated_dispatch_label" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/accept_orders_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/offset_16dp"
            android:textStyle="bold"
            app:layout_constraintBaseline_toBaselineOf="@+id/accept_orders_label"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/label_barrier"
            tools:text="@string/settings_yes" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/prep_time_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/offset_16dp"
            android:textStyle="bold"
            app:layout_constraintBaseline_toBaselineOf="@+id/prep_time_label"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/label_barrier"
            tools:text="55 min." />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/integrated_dispatch_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/offset_16dp"
            android:textStyle="bold"
            app:layout_constraintBaseline_toBaselineOf="@+id/integrated_dispatch_label"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/label_barrier"
            tools:text="@string/settings_ask" />

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/label_barrier"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            app:barrierDirection="right"
            app:constraint_referenced_ids="accept_orders_label,prep_time_label,integrated_dispatch_label" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/controls_guideline"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/bottom_guideline"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="@dimen/settings_height_expanded" />

        <com.google.android.material.progressindicator.CircularProgressIndicator
            android:id="@+id/progress"
            style="@style/Widget.MaterialComponents.CircularProgressIndicator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminate="true"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.Group
            android:id="@+id/group_labels"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:visibility="visible"
            app:constraint_referenced_ids="accept_orders_label,prep_time_label,integrated_dispatch_label,accept_orders_info,prep_time_info,integrated_dispatch_info"
            app:layout_constraintVertical_bias="0" />

        <androidx.constraintlayout.widget.Group
            android:id="@+id/group_infos"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:visibility="visible"
            app:constraint_referenced_ids="accept_orders_info,prep_time_info,integrated_dispatch_info"
            app:layout_constraintVertical_bias="0" />

        <androidx.constraintlayout.widget.Group
            android:id="@+id/group_buttons"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:visibility="gone"
            app:constraint_referenced_ids="accept_orders_switch,prep_time_link,integrated_dispatch_spinner"
            app:layout_constraintVertical_bias="0" />

        <androidx.constraintlayout.helper.widget.Flow
            android:id="@+id/flow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:constraint_referenced_ids="accept_orders_label,accept_orders_info,accept_orders_switch,prep_time_label,prep_time_info,prep_time_link,integrated_dispatch_label,integrated_dispatch_info,integrated_dispatch_spinner"
            app:flow_horizontalAlign="start"
            app:flow_horizontalBias="0"
            app:flow_horizontalGap="@dimen/offset_8dp"
            app:flow_horizontalStyle="packed"
            app:flow_verticalBias="0"
            app:flow_verticalGap="@dimen/offset_8dp"
            app:flow_wrapMode="chain"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
